Step 2 - Karma tests pass with no error.

--- a/src/app/ui/login/login.component.html
+++ b/src/app/ui/login/login.component.html
@@ -1,4 +1,6 @@
 <h4>Login:</h4>
+TODO
+<!--
 <form *ngIf="!authService.getUser()">
 
   <label for="username">User:</label>
@@ -18,3 +20,4 @@
   <span>Logged in as <b>{{ authService.getUser() }}</b></span>
   <a href (click)="logout()">Log out</a>
 </div>
+-->
