--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,15 +1,7 @@
 <div class="container-fluid">
   {{message}}
 
-<button (click)="increment()">Increment</button>
-
-<div>Current Count: {{ count }}</div>
-
-<button (click)="decrement()">Decrement</button>
-
-<button (click)="reset()">Reset Counter</button>
-
-</div>
+Home TODO
 
 <!--
 <div class="container">
