--- a/src/app/ui/home/home.component.html
+++ b/src/app/ui/home/home.component.html
@@ -1,9 +1,21 @@
 <div class="container-fluid">
   {{message}}
 
-Home TODO
+
+<button (click)="inc()">Increment</button>
+Global counter: {{globalCounter}}
+<button (click)="reset()">Reset</button>
+
 
 <!--
+
+<input type="checkbox" #simulateError>
+<button (click)="run(simulateError.checked)">Run</button>
+
+<div>
+{{output}}
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col"></div>
